--- a/content/blogs/6. PyMongo-Easy-Tutorial.md
+++ b/content/blogs/6. PyMongo-Easy-Tutorial.md
@@ -5,6 +5,7 @@ date: 2023/03/19
 image: /blogs-img/pymongo.png
 ogImage: /blogs-img/pymongo.png
 published: true
+tags: [python, mongodb]
 ---
 
 > 前言：本教程旨在弥补中文互联网上pymongo教程不适配4.0版本的一些问题
