fix categories: using lowercase for tags

--- a/content/blogs/2. LAN-video-streaming-frontend-calling-camera-application-instance.md
+++ b/content/blogs/2. LAN-video-streaming-frontend-calling-camera-application-instance.md
@@ -4,7 +4,7 @@ description: 局域网视频串流 + 前端调用摄像头应用实例
 date: 2023/12/18
 image: https://s2.loli.net/2023/12/18/D3rZ2BtpuP5wdlM.png
 published: true
-tags: [Frontend]
+tags: [frontend]
 ---
 
 > 当下个人持有多个跨端设备已经成为日常，继实现音频串流、键鼠穿越以及试用大厂的多端同步应用之后，我结合iriun webcam在前端实现了一个简易的视频串流并在前端调用的实例。
