--- a/content/blogs/3. Linux-SSH-forwarding-GUI.md
+++ b/content/blogs/3. Linux-SSH-forwarding-GUI.md
@@ -1,18 +1,19 @@
 ---
-title: Linux SSH转发GUI
+title: 'LinuxSSH转发GUI'
 description: Linux SSH转发GUI
 date: 2022/11/20
 image: https://s1.ax1x.com/2022/11/20/zMjtYQ.png
 published: true
-tags: [Linux]
+tags: [linux]
 ---
 
-#测试环境
+# 测试环境
+
 **Centos 7 xhell xming**
 
 <!--more-->
 
-#配置环境
+## 配置环境
 
 yum install -y xhost
 将会自动配置xorg
