--- a/content/blogs/5. Overview-of-Python-web-crawlers.md
+++ b/content/blogs/5. Overview-of-Python-web-crawlers.md
@@ -4,7 +4,7 @@ description: python网络爬虫概述
 date: 2022/12/30
 image: /blogs-img/crawler.jpeg
 published: true
-tags: [Python, Crawler]
+tags: [python, crawler]
 ---
 
 写在前面：网络爬虫对于网站管理者并不是一个很友好的行为，爬取时请遵守robots.txt协议。本爬虫教程系列比较简略，只会提到关键的地方，细节和编程基础仍需读者自己研究。
