update to nuxt/content v3;remove sitemap; remove robots

--- a/content/blogs/9. Soft-Routing-Experiment-Based-on-GameCloud.md
+++ b/content/blogs/9. Soft-Routing-Experiment-Based-on-GameCloud.md
@@ -5,6 +5,7 @@ date: 2024/01/25
 published: true
 image: https://s2.loli.net/2024/01/25/9KXTobEgQyWZnvJ.png
 tags: [openwrt, 软路由]
+ontop: true
 ---
 
 > 前言：结合前期实验室的软路由需求，需要有一个独立设备用于播发Tailscale子网流量，发现软路由非常适合这样的需求，但由于传统软路由价格较高，所以想到使用玩客云这款已经退市的设备刷上openwrt系统来实现我的想法。
