fix many contents

--- a/content/blogs/7. Related-configurations-when-using-Obsidian-for-the-first-time.md
+++ b/content/blogs/7. Related-configurations-when-using-Obsidian-for-the-first-time.md
@@ -4,6 +4,7 @@ description: 初次使用Obsidian时相关配置
 date: 2023/02/19
 image: /blogs-img/stackedit-zh.png
 published: true
+tags: [Note, Obsidian]
 ---
 
 # 前言
