--- a/content/blogs/8. Small-experiments-on-automated-tasks.md
+++ b/content/blogs/8. Small-experiments-on-automated-tasks.md
@@ -3,6 +3,7 @@ title: 自动化任务的小实验
 description: 自动化任务的小实验
 date: 2023/07/18
 image: /blogs-img/whyour_qinglong.png
+tags: [linux, automation]
 published: true
 ---
 
