optimize first page

--- a/content/blogs/1. about-this-website.md
+++ b/content/blogs/1. about-this-website.md
@@ -10,23 +10,23 @@ ontop: true
 
 ## 第一章
 
-::MyAudio{:config='{"src":"http://music.163.com/song/media/outer/url?id=1478130362.mp3", "title":"怪天气", "coverImage": "https://y.qq.com/music/photo_new/T002R300x300M0000018fwZM24rErZ_1.jpg"}'}
+::ToolMyAudio{:config='{"src":"http://music.163.com/song/media/outer/url?id=1478130362.mp3", "title":"怪天气", "coverImage": "https://y.qq.com/music/photo_new/T002R300x300M0000018fwZM24rErZ_1.jpg"}'}
 ::
 本站始于2017
 
 - 个人生活
 - 技术笔记
 
-::Timeline
-:TimelineItem{:config='{"date": "2017", "tag": "低代码平台", "tagRight": true, "position": "start", "done": true}'}
-:TimelineItem{:config='{"date": "2017下半年", "tag": "wordpress+开源主题", "tagRight": false, "position": "middle", "done": true}'}
-:TimelineItem{:config='{"date": "2018", "tag": "typecho+handsome主题", "tagRight": true, "position": "middle", "done": true}'}
-:TimelineItem{:config='{"date": "2019", "tag": "停止维护", "tagRight": false, "position": "middle", "done": true}'}
-:TimelineItem{:config='{"date": "2021", "tag": "服务器到期，网站关停 ", "tagRight": true, "position": "middle", "done": true}'}
-:TimelineItem{:config='{"date": "2022", "tag": "本站回归，全面优化，提升稳定性", "tagRight": false, "position": "middle", "done": true}'}
-:TimelineItem{:config='{"date": "2023", "tag": "站点迁移，站长终于会写代码了", "tagRight": true, "position": "middle", "done": true}'}
-:TimelineItem{:config='{"date": "2024", "tag": "站点迁移, 技术栈转移，Nuxt3+TS+SSG", "tagRight": false, "position": "middle", "done": true}'}
-:TimelineItem{:config='{"date": "2025", "tag": "站点迁移, 部署在vercel，还算稳定", "tagRight": true, "position": "end", "done": true}'}
+::ToolTimeline
+:ToolTimelineItem{:config='{"date": "2017", "tag": "低代码平台", "tagRight": true, "position": "start", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2017下半年", "tag": "wordpress+开源主题", "tagRight": false, "position": "middle", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2018", "tag": "typecho+handsome主题", "tagRight": true, "position": "middle", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2019", "tag": "停止维护", "tagRight": false, "position": "middle", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2021", "tag": "服务器到期，网站关停 ", "tagRight": true, "position": "middle", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2022", "tag": "本站回归，全面优化，提升稳定性", "tagRight": false, "position": "middle", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2023", "tag": "站点迁移，站长终于会写代码了", "tagRight": true, "position": "middle", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2024", "tag": "站点迁移, 技术栈转移，Nuxt3+TS+SSG", "tagRight": false, "position": "middle", "done": true}'}
+:ToolTimelineItem{:config='{"date": "2025", "tag": "站点迁移, 部署在vercel，还算稳定", "tagRight": true, "position": "end", "done": true}'}
 ::
 
 <a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=1546492103&website=www.oicqzone.com" class='btn btn-xs btn-accent'>点我添加QQ</a>
